--- a/bsconfig.json
+++ b/bsconfig.json
@@ -15,7 +15,7 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": ["reason-react", "bs-css", "bs-fetch", "@glennsl/bs-json"],
   "bsc-flags": ["-bs-super-errors"],
   "refmt": 3
 }
