--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@glennsl/bs-json": "^4.0.0",
+    "bs-css": "^9.0.1",
+    "bs-fetch": "^0.5.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "reason-react": ">=0.7.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "bs-platform": "^6.0.3",
+    "bs-platform": "^5.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
